# Cortex

./: .env.example  .gitignore  README.md  pyproject.toml
cortex/: api.py  ask.py  cli.py  config.py  engine.py  envfile.py  models.py  proactivity.py  recall.py  retrieval.py  session.py  voice.py
cortex/ingestion/: feed.py  schema.py
cortex/lifecycle/: distiller.py  reconciler.py  retention.py
cortex/llm/: base.py  claude.py  embedding.py  factory.py  mock.py  openai_compatible.py  vertex_gemini.py
cortex/store/: beliefs.py  db.py  episodes.py  profile.py  vectors.py
docs/: ui-design-cortex-vitals.md
evals/: run_evals.py
evals/scenarios/: 01_reinforcement.json  02_contradiction_branch.json  03_fact_supersede.json  04_stale_prune.json  05_use_it_or_lose_it.json
tests/: test_api.py  test_beliefs_store.py  test_brain_api.py  test_brain_session.py  test_cli.py  test_config.py  test_consolidate.py  test_db.py  test_distiller.py  test_engine.py  test_episodes_store.py  test_evals.py  test_feed.py  test_ingestion_schema.py  test_llm_factory.py  test_llm_mock.py  test_models.py  test_proactivity.py  test_profile_store.py  test_provenance_api.py  test_recall_ask.py  test_reconciler.py  test_retention.py  test_retrieval.py  test_session_api.py  test_session_concurrency.py  test_vectors.py  test_voice.py
web/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppShell.tsx  CommandPalette.tsx  SessionContext.tsx  TimeTravelScrubber.tsx
web/lib/: api.ts  events.ts  retention.ts  (+3 more)
(+19 files in other folders)
